intellij/gen/de/monticore/lang/montisecarc/MSAParser.java
// This is a generated file. Not intended for manual editing.
package de.monticore.lang.montisecarc;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static de.monticore.lang.montisecarc.psi.MSACompositeElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static de.monticore.lang.montisecarc.psi.MSATokenElementTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MSAParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACCESS_CONTROL_STATEMENT) {
      r = AccessControlStatement(b, 0);
    }
    else if (t == ACCESS_STATEMENT) {
      r = AccessStatement(b, 0);
    }
    else if (t == AUTO_CONNECT_STATEMENT) {
      r = AutoConnectStatement(b, 0);
    }
    else if (t == CPE_STATEMENT) {
      r = CPEStatement(b, 0);
    }
    else if (t == COMPONENT_BODY) {
      r = ComponentBody(b, 0);
    }
    else if (t == COMPONENT_DECLARATION) {
      r = ComponentDeclaration(b, 0);
    }
    else if (t == COMPONENT_INSTANCE_DECLARATION) {
      r = ComponentInstanceDeclaration(b, 0);
    }
    else if (t == COMPONENT_INSTANCE_NAME) {
      r = ComponentInstanceName(b, 0);
    }
    else if (t == COMPONENT_NAME) {
      r = ComponentName(b, 0);
    }
    else if (t == COMPONENT_SIGNATURE) {
      r = ComponentSignature(b, 0);
    }
    else if (t == CONFIGURATION_STATEMENT) {
      r = ConfigurationStatement(b, 0);
    }
    else if (t == CONNECT_PORT_STATEMENT) {
      r = ConnectPortStatement(b, 0);
    }
    else if (t == CONNECT_SOURCE) {
      r = ConnectSource(b, 0);
    }
    else if (t == CONNECT_TARGET) {
      r = ConnectTarget(b, 0);
    }
    else if (t == CONNECTOR) {
      r = Connector(b, 0);
    }
    else if (t == IDENTITY_STATEMENT) {
      r = IdentityStatement(b, 0);
    }
    else if (t == IMPORT_DECLARATION) {
      r = ImportDeclaration(b, 0);
    }
    else if (t == LEVEL) {
      r = LEVEL(b, 0);
    }
    else if (t == PACKAGE_CLAUSE) {
      r = PackageClause(b, 0);
    }
    else if (t == PORT_ACCESS_ROLE) {
      r = PortAccessRole(b, 0);
    }
    else if (t == PORT_DECLARATION) {
      r = PortDeclaration(b, 0);
    }
    else if (t == PORT_ELEMENT) {
      r = PortElement(b, 0);
    }
    else if (t == PORT_INSTANCE_NAME) {
      r = PortInstanceName(b, 0);
    }
    else if (t == REFERENCE_TYPE) {
      r = ReferenceType(b, 0);
    }
    else if (t == ROLE_NAME) {
      r = RoleName(b, 0);
    }
    else if (t == STEREOTYPE) {
      r = Stereotype(b, 0);
    }
    else if (t == TRUST_LEVEL_RELATION_STATEMENT) {
      r = TrustLevelRelationStatement(b, 0);
    }
    else if (t == TRUST_LEVEL_STATEMENT) {
      r = TrustLevelStatement(b, 0);
    }
    else if (t == TYPE_PARAMETERS) {
      r = TypeParameters(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  /* ********************************************************** */
  // Stereotype? ACCESSCONTROL { ON | OFF } semi
  public static boolean AccessControlStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessControlStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ACCESS_CONTROL_STATEMENT, "<access control statement>");
    r = AccessControlStatement_0(b, l + 1);
    r = r && consumeToken(b, ACCESSCONTROL);
    p = r; // pin = 2
    r = r && report_error_(b, AccessControlStatement_2(b, l + 1));
    r = p && semi(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean AccessControlStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessControlStatement_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  // ON | OFF
  private static boolean AccessControlStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessControlStatement_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, ON);
    if (!r) r = consumeTokenFast(b, OFF);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PortAccessRole | RoleName
  static boolean AccessRoles(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessRoles")) return false;
    if (!nextTokenIsFast(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = PortAccessRole(b, l + 1);
    if (!r) r = RoleName(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Stereotype? ACCESS AccessRoles ( COMMA AccessRoles )* semi
  public static boolean AccessStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ACCESS_STATEMENT, "<access statement>");
    r = AccessStatement_0(b, l + 1);
    r = r && consumeToken(b, ACCESS);
    p = r; // pin = 2
    r = r && report_error_(b, AccessRoles(b, l + 1));
    r = p && report_error_(b, AccessStatement_3(b, l + 1)) && r;
    r = p && semi(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean AccessStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessStatement_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  // ( COMMA AccessRoles )*
  private static boolean AccessStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessStatement_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!AccessStatement_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AccessStatement_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA AccessRoles
  private static boolean AccessStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AccessStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, COMMA);
    r = r && AccessRoles(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Stereotype? AUTOCONNECT [ENCRYPTED | UNENCRYPTED] { TYPE | port | OFF } semi
  public static boolean AutoConnectStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AutoConnectStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, AUTO_CONNECT_STATEMENT, "<auto connect statement>");
    r = AutoConnectStatement_0(b, l + 1);
    r = r && consumeToken(b, AUTOCONNECT);
    p = r; // pin = 2
    r = r && report_error_(b, AutoConnectStatement_2(b, l + 1));
    r = p && report_error_(b, AutoConnectStatement_3(b, l + 1)) && r;
    r = p && semi(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean AutoConnectStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AutoConnectStatement_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  // [ENCRYPTED | UNENCRYPTED]
  private static boolean AutoConnectStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AutoConnectStatement_2")) return false;
    AutoConnectStatement_2_0(b, l + 1);
    return true;
  }

  // ENCRYPTED | UNENCRYPTED
  private static boolean AutoConnectStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AutoConnectStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, ENCRYPTED);
    if (!r) r = consumeTokenFast(b, UNENCRYPTED);
    exit_section_(b, m, null, r);
    return r;
  }

  // TYPE | port | OFF
  private static boolean AutoConnectStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AutoConnectStatement_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, TYPE);
    if (!r) r = consumeTokenFast(b, PORT);
    if (!r) r = consumeTokenFast(b, OFF);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Stereotype? CPE STRING semi
  public static boolean CPEStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CPEStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CPE_STATEMENT, "<cpe statement>");
    r = CPEStatement_0(b, l + 1);
    r = r && consumeTokens(b, 1, CPE, STRING);
    p = r; // pin = 2
    r = r && semi(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean CPEStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CPEStatement_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SimpleReferenceType  (DOT SimpleReferenceType)*
  static boolean ComplexReferenceType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComplexReferenceType")) return false;
    if (!nextTokenIsFast(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = SimpleReferenceType(b, l + 1);
    p = r; // pin = 1
    r = r && ComplexReferenceType_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (DOT SimpleReferenceType)*
  private static boolean ComplexReferenceType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComplexReferenceType_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ComplexReferenceType_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComplexReferenceType_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // DOT SimpleReferenceType
  private static boolean ComplexReferenceType_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComplexReferenceType_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, DOT);
    r = r && SimpleReferenceType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (Statement | ComponentDeclaration)* RBRACE
  public static boolean ComponentBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentBody")) return false;
    if (!nextTokenIsFast(b, LBRACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_BODY, null);
    r = consumeTokenFast(b, LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, ComponentBody_1(b, l + 1));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (Statement | ComponentDeclaration)*
  private static boolean ComponentBody_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentBody_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ComponentBody_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComponentBody_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // Statement | ComponentDeclaration
  private static boolean ComponentBody_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentBody_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Statement(b, l + 1);
    if (!r) r = ComponentDeclaration(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Stereotype? component ComponentSignature ComponentBody
  public static boolean ComponentDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentDeclaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_DECLARATION, "<component declaration>");
    r = ComponentDeclaration_0(b, l + 1);
    r = r && consumeToken(b, COMPONENT);
    p = r; // pin = 2
    r = r && report_error_(b, ComponentSignature(b, l + 1));
    r = p && ComponentBody(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean ComponentDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentDeclaration_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ComponentInstanceName (LBRACK SimpleConnectPortStatement (semi SimpleConnectPortStatement)* RBRACK)?
  static boolean ComponentInstance(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstance")) return false;
    if (!nextTokenIsFast(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ComponentInstanceName(b, l + 1);
    r = r && ComponentInstance_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACK SimpleConnectPortStatement (semi SimpleConnectPortStatement)* RBRACK)?
  private static boolean ComponentInstance_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstance_1")) return false;
    ComponentInstance_1_0(b, l + 1);
    return true;
  }

  // LBRACK SimpleConnectPortStatement (semi SimpleConnectPortStatement)* RBRACK
  private static boolean ComponentInstance_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstance_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LBRACK);
    r = r && SimpleConnectPortStatement(b, l + 1);
    r = r && ComponentInstance_1_0_2(b, l + 1);
    r = r && consumeToken(b, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // (semi SimpleConnectPortStatement)*
  private static boolean ComponentInstance_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstance_1_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ComponentInstance_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComponentInstance_1_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // semi SimpleConnectPortStatement
  private static boolean ComponentInstance_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstance_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = semi(b, l + 1);
    r = r && SimpleConnectPortStatement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Stereotype? InputFilter? ReferenceType ("(" QualifiedIdentifier ("," QualifiedIdentifier)* ")" )? ComponentInstance (COMMA ComponentInstance)* semi
  public static boolean ComponentInstanceDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_INSTANCE_DECLARATION, "<component instance declaration>");
    r = ComponentInstanceDeclaration_0(b, l + 1);
    r = r && ComponentInstanceDeclaration_1(b, l + 1);
    r = r && ReferenceType(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, ComponentInstanceDeclaration_3(b, l + 1));
    r = p && report_error_(b, ComponentInstance(b, l + 1)) && r;
    r = p && report_error_(b, ComponentInstanceDeclaration_5(b, l + 1)) && r;
    r = p && semi(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // Stereotype?
  private static boolean ComponentInstanceDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_0")) return false;
    Stereotype(b, l + 1);
    return true;
  }

  // InputFilter?
  private static boolean ComponentInstanceDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_1")) return false;
    InputFilter(b, l + 1);
    return true;
  }

  // ("(" QualifiedIdentifier ("," QualifiedIdentifier)* ")" )?
  private static boolean ComponentInstanceDeclaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_3")) return false;
    ComponentInstanceDeclaration_3_0(b, l + 1);
    return true;
  }

  // "(" QualifiedIdentifier ("," QualifiedIdentifier)* ")"
  private static boolean ComponentInstanceDeclaration_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LPAREN);
    r = r && QualifiedIdentifier(b, l + 1);
    r = r && ComponentInstanceDeclaration_3_0_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("," QualifiedIdentifier)*
  private static boolean ComponentInstanceDeclaration_3_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_3_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ComponentInstanceDeclaration_3_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComponentInstanceDeclaration_3_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // "," QualifiedIdentifier
  private static boolean ComponentInstanceDeclaration_3_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_3_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, COMMA);
    r = r && QualifiedIdentifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA ComponentInstance)*
  private static boolean ComponentInstanceDeclaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ComponentInstanceDeclaration_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComponentInstanceDeclaration_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA ComponentInstance
  private static boolean ComponentInstanceDeclaration_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceDeclaration_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, COMMA);
    r = r && ComponentInstance(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean ComponentInstanceName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentInstanceName")) return false;
    if (!nextTokenIsFast(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, ID);
    exit_section_(b, m, COMPONENT_INSTANCE_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean ComponentName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentName")) return false;
    if (!nextTokenIsFast(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, ID);
    exit_section_(b, m, COMPONENT_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // InputFilter? ComponentName TypeParameters? ("(" (Parameter | ",")+ ")")? (extends ReferenceType)? ComponentInstanceName?
  public static boolean ComponentSignature(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMPONENT_SIGNATURE, "<component signature>");
    r = ComponentSignature_0(b, l + 1);
    r = r && ComponentName(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, ComponentSignature_2(b, l + 1));
    r = p && report_error_(b, ComponentSignature_3(b, l + 1)) && r;
    r = p && report_error_(b, ComponentSignature_4(b, l + 1)) && r;
    r = p && ComponentSignature_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, signature_recover_parser_);
    return r || p;
  }

  // InputFilter?
  private static boolean ComponentSignature_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature_0")) return false;
    InputFilter(b, l + 1);
    return true;
  }

  // TypeParameters?
  private static boolean ComponentSignature_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature_2")) return false;
    TypeParameters(b, l + 1);
    return true;
  }

  // ("(" (Parameter | ",")+ ")")?
  private static boolean ComponentSignature_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature_3")) return false;
    ComponentSignature_3_0(b, l + 1);
    return true;
  }

  // "(" (Parameter | ",")+ ")"
  private static boolean ComponentSignature_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LPAREN);
    r = r && ComponentSignature_3_0_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (Parameter | ",")+
  private static boolean ComponentSignature_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComponentSignature_3_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ComponentSignature_3_0_1_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!ComponentSignature_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ComponentSignature_3_0_1", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, m, null, r);
    return r;
  }
